fixed flex wrap

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -32,6 +32,7 @@ a.btn {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 ul.fav {
